syntax = "proto3";
package b9lab.tollroad.tollroad;

option go_package = "github.com/b9lab/toll-road/x/tollroad/types";

message RoadOperator {
  string index = 1; 
  string name = 2; 
  string token = 3; 
  bool active = 4; 
  string creator = 5;
}

